tests/rgs/semantic_errors/undeclared_condition_forget.rgs
EVENT spotted ENVIRONMENT.
DURING ALWAYS:
    WHEN spotted ENVIRONMENT:
        DO FORGET is_hungry.
